--- a/src/app/profile-search/profile-search.component.html
+++ b/src/app/profile-search/profile-search.component.html
@@ -1,16 +1,16 @@
 <div class="flex-container">
     <div class="searchBox">
-    <div style="order: 1">
-        <h1>Profile Search</h1> 
-        <input (keyup)="search($event.target.value)" id="name" placeholder="Search"/>
-    </div>
+        <div style="order: 1">
+            <h1>Profile Search</h1>
+            <input #searchInput id="name" placeholder="Search" />
         </div>
-    <div class="profile-info">          
-    <div style="order: 1">
-        <h2 *ngIf="user">User's name: {{user.name}}</h2>
-        </div>    
-    <div style="order: 2">
-        <profile-image *ngIf="user" [src]="user.avatar_url"></profile-image>
+    </div>
+    <div class="profile-info">
+        <div style="order: 1">
+            <h2>User's name: {{ (searchEvent | async)?.name }}</h2>
+        </div>
+        <div style="order: 2">
+            <profile-image [src]="(searchEvent | async)?.avatar_url"></profile-image>
         </div>
     </div>
     <repo-list></repo-list>
