--- a/src/app/repo-list/repo-list.html
+++ b/src/app/repo-list/repo-list.html
@@ -1,7 +1,7 @@
 <div class="repo-list">
 <div style="order: 3">
-    <h2 *ngIf="repo">User's Repos:</h2>
-<a *ngFor="let r of repo">
+    <h2 *ngIf="(repo$ | async)">User's Repos:</h2>
+<a *ngFor="let r of repo$ | async">
     <li>
             <a href="{{r.html_url}}">{{r.name}}</a>
             <p>Language: {{r.language}}.
