refactored code to have a search component and display component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <header></header>
-<profile-search></profile-search>
+<profile-show></profile-show>
 <app-messages></app-messages>
 <footer></footer>
