refactored code and fixed the profile-show component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header></header>
-<profile-show></profile-show>
-<app-messages></app-messages>
-<footer></footer>
+<ghv-header></ghv-header>
+<ghv-profile-search></ghv-profile-search>
+<ghv-footer></ghv-footer>
+
