--- a/src/app/common/footer.component.css
+++ b/src/app/common/footer.component.css
@@ -1,5 +1,6 @@
 .footer {
-    background-color: black;
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 44%, rgba(55,111,63,1) 67%);
     color: lawngreen;
     text-align: center;
     border-style: outset;
