--- a/src/app/common/header.component.css
+++ b/src/app/common/header.component.css
@@ -3,7 +3,8 @@
     margin: 0;
     list-style: none;
     display: flex;
-    background-color: black;
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 44%, rgba(55,111,63,1) 67%);
     border-style: outset;
     border-color: black;
 }
@@ -18,3 +19,5 @@ div.title {
     flex-shrink: 1;
     color: lawngreen;
 }
+
+
