--- a/src/app/profile-search/profile-search.css
+++ b/src/app/profile-search/profile-search.css
@@ -1,12 +1,45 @@
 .container {
-    display: flex;
-    flex-flow: row wrap;
+    background-color: gray;
+    margin-top: 0%;
+    border-left: solid;
+    border-right: solid;
+    border-bottom: solid;
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 3; 
+    grid-template-columns: 5% 12%;
+    background-image: url("../common/background.jpg");
+    border-style: outset;
+    border-color: black;
+}
+.gitLogo {
+    padding-left: 2%;
+    grid-column-start: 1;
+    grid-column-end: 1;
+}
+.searchBox {
+    margin: 0%;
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+h2 {
+    color: lawngreen;
+}
+p {
+        color: white;
 }
 
-.searchBox {
-    background-color: grey;
-    border-style: outset;
-    border-color: green;
-    width: 20%;
-    padding-left: 2%;
+.welcome {
+    grid-column-start: 3;
+    grid-column-end: 3;
+}
+
+
+h2 {
+    margin: 0%;
+    padding: 2%;
+}
+
+input {
+    margin-left: 2%;
 }
