--- a/src/app/profile-search/profile-search.css
+++ b/src/app/profile-search/profile-search.css
@@ -4,23 +4,23 @@
     border-left: solid;
     border-right: solid;
     border-bottom: solid;
-    display: grid;
-    grid-column-start: 1;
-    grid-column-end: 3; 
-    grid-template-columns: 5% 12%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
     background-image: url("../common/background.jpg");
     border-style: outset;
     border-color: black;
 }
 .gitLogo {
-    padding-left: 2%;
-    grid-column-start: 1;
-    grid-column-end: 1;
+    padding-left: 1%;
+    width: 5%;
 }
 .searchBox {
     margin: 0%;
-    grid-column-start: 2;
-    grid-column-end: 2;
+    width: 20%;
 }
 h2 {
     color: lawngreen;
@@ -28,12 +28,6 @@ h2 {
 p {
         color: white;
 }
-
-.welcome {
-    grid-column-start: 3;
-    grid-column-end: 3;
-}
-
 
 h2 {
     margin: 0%;
