--- a/src/app/profile-show/profile-show.css
+++ b/src/app/profile-show/profile-show.css
@@ -1,21 +1,41 @@
 .userInfo {
-    display: grid;
-    grid-column-start: 1;
-    grid-column-end: 3; 
     padding-top: 2%;
-    grid-template-columns: 20% 20%;
     padding-left: 6%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
 } 
 
-.userImage {
-    grid-column-start: 2;
-    grid-column-end: 2; 
+.welcome {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding-left: 5%;
+}
+
+profile-image {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start; 
 }
 
 .userName {
-    grid-column-start: 1;
-    grid-column-end: 1; 
     padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    width: 20%;
 }
 
 .userInfo h2 { 
@@ -23,19 +43,30 @@
 }
 
 .repo {
-    display: inline-grid;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
     border-style: ridge;
-    grid-template-columns: 50% 50%;
-    margin: 1% 5% 5%;
+    margin: 0%;
+    background-color: #E0E0E0;
 }
 .repo:empty{
     display: none;
 }
 
 .repoList {
+    width: 310px;
     word-wrap: break-word;
-    padding: 2%;
+    border-style: ridge;
+    background-color: white;
+    padding: 1%;
 }
+   
+
 .profile-image:empty{
     display: none;
 }
