--- a/src/app/profile-show/profile-show.html
+++ b/src/app/profile-show/profile-show.html
@@ -1,18 +1,20 @@
+<div class="welcome">
+    <h3>Welcome to Github profile viewer.
+        To get started just enter the user's profile name.</h3>
+</div>
 <div class="userInfo">
     <div class="userName">
         <h2>User's name: {{ (profile$ | async).name }}</h2>
         <h2>User's login: {{ (profile$ | async).login}}</h2>
     </div>
-    <div class="userImage">
-        <profile-image [src]="(profile$ | async).avatar_url"></profile-image>
-    </div>
+    <profile-image [src]="(profile$ | async).avatar_url"></profile-image>
 </div>
 <div class="repo">
-        <div *ngFor="let repo of repos$ | async">
-        <div class="repoList">
-            <p><b>Name:</b>{{ repo.name }}
-                <b>Language:</b>{{repo.language}}</p>
-            <a [href]="repo.html_url">{{repo.html_url}}</a>
-        </div>
+    <div *ngFor="let repo of repos$ | async" class="repoList">
+        <p>
+            <b>Name:</b>{{ repo.name }}
+            <b>Language:</b>{{repo.language}}
+        </p>
+        <a [href]="repo.html_url">{{repo.html_url}}</a>
     </div>
 </div>
